# charts

./: .gitignore  .size-limit.json  LICENSE  README.md  package.json  pnpm-lock.yaml  start_demo.sh  tsconfig.base.json  turbo.json
.changeset/: README.md  align-by-duration-timeformat-preset.md  config.json  feature-loading-interactive-timeformat.md  full-bugs-march.md  initial-zoom-independent-axes.md  vbar-panel.md
.github/workflows/: ci.yml  release-python.yml  release.yml
apps/embed/: index.html  package.json  vite.config.ts
apps/embed/src/: EmbedApp.tsx  main.tsx
apps/playground/: index.html  package.json
apps/playground/public/: line_chart.json  line_chart_train_test.json  supertrend.json
apps/playground/src/: App.tsx  BarChartsDemo.tsx  EquityCurvesDemo.tsx  LineChartDemo.tsx  LoadingDemo.tsx  MergedPlayground.tsx  MonthlyChartDemo.tsx  PortfolioOverview.tsx  SuperTrendDemo.tsx  TerminalGreenDemo.tsx  TrainTestDemo.tsx  ZoomLevelsDemo.tsx  main.tsx
apps/playground/src/finterion/: components.tsx  themeContext.tsx  tokens.ts
bindings/python/: README.md  pyproject.toml
bindings/python/examples/: aapl_supertrend.ipynb  aapl_supertrend.json  aapl_supertrend.py
bindings/python/src/finterion_charts/: __init__.py  builder.py  capabilities.py  codec.py  display.py  schema.py  validator.py
bindings/python/src/finterion_charts/_static/: embed.html
bindings/python/tests/: test_builder.py  test_codec.py  test_validator.py
docs/: embedding.md  llm-prompt.md  overview.md  panels.md  spec.md  theme.md  time_format.md  zooming.md
docs/examples/: bar_charts.md  line_chart.md  multi_line_chart.md  multi_line_chart_duration_aligned.md
scripts/: build-python-embed-bundle.mjs  generate_supertrend.py
